--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 
     <div class="container">
         <div class="update-info">
-            <strong>🔄 Última actualización:</strong> 27 de Agosto 2025 |
-            <strong>📊 Datos procesados:</strong> 285 facturas de 96 clientes activos |
+            <strong>🔄 Última actualización:</strong> 27 de Agosto 2025 (Versión 2) |
+            <strong>📊 Datos procesados:</strong> 280 facturas de 94 clientes activos |
             <strong class="positive-trend">📈 Mejora Continua</strong>
         </div>
 
@@ -293,33 +293,33 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Total Facturas</h3>
-                    <div class="value">285</div>
-                    <div class="change">Facturas por cobrar <span class="improvement-badge">-16 vs anterior</span></div>
+                    <div class="value">280</div>
+                    <div class="change">Facturas por cobrar <span class="improvement-badge">-5 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Monto Total</h3>
-                    <div class="value">$8,935</div>
-                    <div class="change">Total por cobrar <span class="improvement-badge">-$675 vs anterior</span></div>
+                    <div class="value">$8,477</div>
+                    <div class="change">Total por cobrar <span class="improvement-badge">-$458 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Clientes Activos</h3>
-                    <div class="value">96</div>
-                    <div class="change">Clientes únicos <span class="improvement-badge">-7 vs anterior</span></div>
+                    <div class="value">94</div>
+                    <div class="change">Clientes únicos <span class="improvement-badge">-2 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Promedio por Factura</h3>
-                    <div class="value">$31.35</div>
-                    <div class="change">Monto promedio <span class="improvement-badge">-$0.58 vs anterior</span></div>
+                    <div class="value">$30.27</div>
+                    <div class="change">Monto promedio <span class="improvement-badge">-$1.08 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Días Promedio Cobro</h3>
-                    <div class="value positive-trend">20.7</div>
-                    <div class="change positive-trend">Excelente gestión <span class="improvement-badge">+0.5 días</span></div>
+                    <div class="value positive-trend">20.6</div>
+                    <div class="change positive-trend">Excelente gestión <span class="improvement-badge">-0.1 días</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Facturas Vencidas</h3>
-                    <div class="value positive-trend">79</div>
-                    <div class="change positive-trend">27.7% del total <span class="improvement-badge">+3.1% vs anterior</span></div>
+                    <div class="value positive-trend">76</div>
+                    <div class="change positive-trend">27.1% del total <span class="improvement-badge">-0.6% vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Ventas Mes Anterior</h3>
@@ -347,16 +347,16 @@
             <div class="alert-section">
                 <div class="alert-title">Situación Financiera - Mejora Continua</div>
                 <div class="alert-item">
-                    <strong>Gestión Sostenible:</strong> 79 facturas vencidas (27.7%) por $1,333.93 - <span class="positive-trend">Mantiene control</span>
+                    <strong>Gestión Sostenible:</strong> 76 facturas vencidas (27.1%) por $1,016.42 - <span class="positive-trend">Mantiene control</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Optimizada:</strong> 72.3% de facturas por vencer ($7,601.04) - <span class="positive-trend">Flujo de caja estable</span>
+                    <strong>Cartera Optimizada:</strong> 72.9% de facturas por vencer ($7,460.19) - <span class="positive-trend">Flujo de caja estable</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Ratio CxC vs Ventas:</strong> 3.0% - <span class="positive-trend">Mantiene buen nivel</span>
+                    <strong>Ratio CxC vs Ventas:</strong> 2.9% - <span class="positive-trend">Mantiene buen nivel</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Eficiencia de Cobro:</strong> 20.7 días promedio - <span class="positive-trend">Gestión eficiente</span>
+                    <strong>Eficiencia de Cobro:</strong> 20.6 días promedio - <span class="positive-trend">Gestión eficiente</span>
                 </div>
             </div>
         </div>
@@ -366,18 +366,18 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Por Vencer</h3>
-                    <div class="value positive-trend">$7,601</div>
-                    <div class="change positive-trend">206 facturas (72.3%) <span class="improvement-badge">-3.1% vs anterior</span></div>
+                    <div class="value positive-trend">$7,460</div>
+                    <div class="change positive-trend">204 facturas (72.9%) <span class="improvement-badge">+0.6% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (0-30 días)</h3>
-                    <div class="value">$1,334</div>
-                    <div class="change">79 facturas (27.7%) <span class="improvement-badge">+4.1% vs anterior</span></div>
+                    <div class="value">$1,016</div>
+                    <div class="change">76 facturas (27.1%) <span class="improvement-badge">-0.6% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (31-60 días)</h3>
                     <div class="value">$0</div>
-                    <div class="change">0 facturas (0%) <span class="improvement-badge">-1.0% vs anterior</span></div>
+                    <div class="change">0 facturas (0%) <span class="improvement-badge">Mantiene excelencia</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Vencida (61+ días)</h3>
@@ -394,10 +394,10 @@
             <div class="alert-section">
                 <div class="alert-title">Situación de Cobros - Gestión Sostenible</div>
                 <div class="alert-item">
-                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">72.3% de facturas por vencer</span> - Mantiene buen nivel
+                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">72.9% de facturas por vencer</span> - Mantiene buen nivel
                 </div>
                 <div class="alert-item">
-                    <strong>Vencimientos Controlados:</strong> Solo $1,333.93 en facturas vencidas - <span class="positive-badge">Mantiene control</span>
+                    <strong>Vencimientos Controlados:</strong> Solo $1,016.42 en facturas vencidas - <span class="positive-badge">Mantiene control</span>
                 </div>
                 <div class="alert-item">
                     <strong>Sin Morosidad Crítica:</strong> <span class="positive-trend">0 facturas con más de 60 días</span> - Mantiene excelente control
@@ -410,7 +410,7 @@
             <div class="chart-container">
                 <div class="chart-title">Top 10 Clientes por Monto Pendiente</div>
                 <div style="text-align: center; font-size: 0.9em; color: #666; margin-bottom: 15px; font-style: italic;">
-                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización 27 de Agosto
+                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización 27 de Agosto (Versión 2)
                 </div>
                 <div class="client-list">
                     <div class="client-item">
@@ -434,24 +434,24 @@
                         <div class="client-amount">$276.17</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">6. INSTITUTO CUMBRES</div>
-                        <div class="client-amount">$205.45</div>
-                    </div>
-                    <div class="client-item">
-                        <div class="client-name">7. MARIA CLAVIER</div>
+                        <div class="client-name">6. MARIA CLAVIER</div>
                         <div class="client-amount">$153.63</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">8. AC CENTRO MEDICO DOCENTE LA TRINIDAD (Sucursal)</div>
+                        <div class="client-name">7. AC CENTRO MEDICO DOCENTE LA TRINIDAD (Sucursal)</div>
                         <div class="client-amount">$151.93</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">9. Jesus Enrique Navarro Rosales</div>
-                        <div class="client-amount">$137.48</div>
+                        <div class="client-name">8. Ursula Rua Figueroa</div>
+                        <div class="client-amount">$120.41</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">10. Soraima Revelo</div>
-                        <div class="client-amount">$137.09</div>
+                        <div class="client-name">9. Miriam Zulay Contreras De Alayon</div>
+                        <div class="client-amount">$104.55</div>
+                    </div>
+                    <div class="client-item">
+                        <div class="client-name">10. AMERICA HIDALGO DE ZAMBRANO / COCOMERCADO</div>
+                        <div class="client-amount">$101.67</div>
                     </div>
                 </div>
             </div>
@@ -498,12 +498,12 @@
                 <div class="metric-card risk-medium">
                     <h3>Riesgo Medio</h3>
                     <div class="value">$3,052</div>
-                    <div class="change">6 facturas <span class="improvement-badge">-4 facturas vs anterior</span></div>
+                    <div class="change">6 facturas <span class="improvement-badge">Mantiene control</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Riesgo Bajo</h3>
-                    <div class="value positive-trend">$5,883</div>
-                    <div class="change positive-trend">279 facturas <span class="improvement-badge">97.9% del total</span></div>
+                    <div class="value positive-trend">$5,425</div>
+                    <div class="change positive-trend">274 facturas <span class="improvement-badge">97.9% del total</span></div>
                 </div>
             </div>
 
@@ -574,7 +574,7 @@
         function renderOverviewCharts() {
             // Gráfico de torta - Estado de vencimiento
             const agingData = [{
-                values: [7601.04, 1333.93],
+                values: [7460.19, 1016.42],
                 labels: ['Por vencer', 'Vencida (0-30 días)'],
                 type: 'pie',
                 marker: {
@@ -615,14 +615,14 @@
             const agingDetailData = [
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [206, 79, 0, 0],
+                    y: [204, 76, 0, 0],
                     name: 'Cantidad de Facturas',
                     type: 'bar',
                     marker: {color: locatelColors[0]}
                 },
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [7601.04, 1333.93, 0, 0],
+                    y: [7460.19, 1016.42, 0, 0],
                     name: 'Monto ($)',
                     type: 'bar',
                     yaxis: 'y2',
@@ -642,7 +642,7 @@
         function renderClientCharts() {
             // Distribución por cliente (top 10 vs resto)
             const clientDistData = [{
-                values: [6875.88, 2059.09],
+                values: [6875.88, 1600.73],
                 labels: ['Top 10 Clientes', 'Otros Clientes'],
                 type: 'pie',
                 marker: {
@@ -658,7 +658,7 @@
             // Concentración de cobros
             const concentrationData = [{
                 x: ['Top 3', 'Top 5', 'Top 10', 'Todos'],
-                y: [49.7, 58.3, 77.0, 100],
+                y: [52.3, 60.9, 81.1, 100],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -675,7 +675,7 @@
             // Evolución mensual
             const monthlyData = [{
                 x: ['Jul 2025', 'Ago 2025'],
-                y: [180, 105],
+                y: [180, 100],
                 type: 'scatter',
                 mode: 'lines+markers',
                 line: {color: locatelColors[1], width: 3}
@@ -690,7 +690,7 @@
             // Distribución mensual
             const monthlyDistData = [{
                 x: ['Jul', 'Ago'],
-                y: [180, 105],
+                y: [180, 100],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -704,7 +704,7 @@
             // Días de cobro promedio
             const collectionDaysData = [{
                 x: ['Promedio General'],
-                y: [20.7],
+                y: [20.6],
                 type: 'bar',
                 marker: {color: locatelColors[4]}
             }];
@@ -721,7 +721,7 @@
             // Matriz de riesgo
             const riskData = [{
                 x: ['Bajo', 'Medio', 'Alto'],
-                y: [5883.32, 3051.65, 0],
+                y: [5424.96, 3051.65, 0],
                 type: 'bar',
                 marker: {
                     color: ['#7CC141', '#F79617', '#dc3545']
