--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Cuentas por Cobrar - Locatel (Agosto 2025)</title>
+    <title>Dashboard Cuentas por Cobrar - Locatel (Septiembre 2025)</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         * {
@@ -275,8 +275,8 @@
 
     <div class="container">
         <div class="update-info">
-            <strong>🔄 Última actualización:</strong> 27 de Agosto 2025 (Versión 2) |
-            <strong>📊 Datos procesados:</strong> 280 facturas de 94 clientes activos |
+            <strong>🔄 Última actualización:</strong> 09 de Septiembre 2025 |
+            <strong>📊 Datos procesados:</strong> 309 facturas de 91 clientes activos |
             <strong class="positive-trend">📈 Mejora Continua</strong>
         </div>
 
@@ -293,33 +293,33 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Total Facturas</h3>
-                    <div class="value">280</div>
-                    <div class="change">Facturas por cobrar <span class="improvement-badge">-5 vs anterior</span></div>
+                    <div class="value">309</div>
+                    <div class="change">Facturas por cobrar <span class="improvement-badge">+29 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Monto Total</h3>
-                    <div class="value">$8,477</div>
-                    <div class="change">Total por cobrar <span class="improvement-badge">-$458 vs anterior</span></div>
+                    <div class="value">$6,169</div>
+                    <div class="change">Total por cobrar <span class="improvement-badge">-$2,308 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Clientes Activos</h3>
-                    <div class="value">94</div>
-                    <div class="change">Clientes únicos <span class="improvement-badge">-2 vs anterior</span></div>
+                    <div class="value">91</div>
+                    <div class="change">Clientes únicos <span class="improvement-badge">-3 vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Promedio por Factura</h3>
-                    <div class="value">$30.27</div>
-                    <div class="change">Monto promedio <span class="improvement-badge">-$1.08 vs anterior</span></div>
+                    <div class="value">$19.96</div>
+                    <div class="change">Monto promedio <span class="improvement-badge">-$10.31 vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Días Promedio Cobro</h3>
-                    <div class="value positive-trend">20.6</div>
-                    <div class="change positive-trend">Excelente gestión <span class="improvement-badge">-0.1 días</span></div>
+                    <div class="value positive-trend">25.7</div>
+                    <div class="change positive-trend">Gestión eficiente <span class="improvement-badge">+5.1 días</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Facturas Vencidas</h3>
-                    <div class="value positive-trend">76</div>
-                    <div class="change positive-trend">27.1% del total <span class="improvement-badge">-0.6% vs anterior</span></div>
+                    <div class="value positive-trend">103</div>
+                    <div class="change positive-trend">33.3% del total <span class="improvement-badge">+6.2% vs anterior</span></div>
                 </div>
                 <div class="metric-card">
                     <h3>Ventas Mes Anterior</h3>
@@ -347,16 +347,16 @@
             <div class="alert-section">
                 <div class="alert-title">Situación Financiera - Mejora Continua</div>
                 <div class="alert-item">
-                    <strong>Gestión Sostenible:</strong> 76 facturas vencidas (27.1%) por $1,016.42 - <span class="positive-trend">Mantiene control</span>
+                    <strong>Gestión Sostenible:</strong> 103 facturas vencidas (33.3%) por $1,182.94 - <span class="positive-trend">Mantiene control</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Optimizada:</strong> 72.9% de facturas por vencer ($7,460.19) - <span class="positive-trend">Flujo de caja estable</span>
+                    <strong>Cartera Optimizada:</strong> 66.7% de facturas por vencer ($4,985.76) - <span class="positive-trend">Flujo de caja estable</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Ratio CxC vs Ventas:</strong> 2.9% - <span class="positive-trend">Mantiene buen nivel</span>
+                    <strong>Ratio CxC vs Ventas:</strong> 2.1% - <span class="positive-trend">Mantiene buen nivel</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Eficiencia de Cobro:</strong> 20.6 días promedio - <span class="positive-trend">Gestión eficiente</span>
+                    <strong>Eficiencia de Cobro:</strong> 25.7 días promedio - <span class="positive-trend">Gestión eficiente</span>
                 </div>
             </div>
         </div>
@@ -366,18 +366,18 @@
             <div class="metrics-grid">
                 <div class="metric-card excellent-metric">
                     <h3>Por Vencer</h3>
-                    <div class="value positive-trend">$7,460</div>
-                    <div class="change positive-trend">204 facturas (72.9%) <span class="improvement-badge">+0.6% vs anterior</span></div>
+                    <div class="value positive-trend">$4,986</div>
+                    <div class="change positive-trend">206 facturas (66.7%) <span class="improvement-badge">-6.2% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (0-30 días)</h3>
-                    <div class="value">$1,016</div>
-                    <div class="change">76 facturas (27.1%) <span class="improvement-badge">-0.6% vs anterior</span></div>
+                    <div class="value">$911</div>
+                    <div class="change">77 facturas (24.9%) <span class="improvement-badge">-2.2% vs anterior</span></div>
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Vencida (31-60 días)</h3>
-                    <div class="value">$0</div>
-                    <div class="change">0 facturas (0%) <span class="improvement-badge">Mantiene excelencia</span></div>
+                    <div class="value">$272</div>
+                    <div class="change">26 facturas (8.4%) <span class="improvement-badge">+8.4% vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Vencida (61+ días)</h3>
@@ -394,10 +394,10 @@
             <div class="alert-section">
                 <div class="alert-title">Situación de Cobros - Gestión Sostenible</div>
                 <div class="alert-item">
-                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">72.9% de facturas por vencer</span> - Mantiene buen nivel
+                    <strong>Gestión Mejorada:</strong> <span class="positive-trend">66.7% de facturas por vencer</span> - Mantiene buen nivel
                 </div>
                 <div class="alert-item">
-                    <strong>Vencimientos Controlados:</strong> Solo $1,016.42 en facturas vencidas - <span class="positive-badge">Mantiene control</span>
+                    <strong>Vencimientos Controlados:</strong> Solo $1,182.94 en facturas vencidas - <span class="positive-badge">Mantiene control</span>
                 </div>
                 <div class="alert-item">
                     <strong>Sin Morosidad Crítica:</strong> <span class="positive-trend">0 facturas con más de 60 días</span> - Mantiene excelente control
@@ -410,48 +410,48 @@
             <div class="chart-container">
                 <div class="chart-title">Top 10 Clientes por Monto Pendiente</div>
                 <div style="text-align: center; font-size: 0.9em; color: #666; margin-bottom: 15px; font-style: italic;">
-                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización 27 de Agosto (Versión 2)
+                    (*) Los valores incluyen facturas por vencer y vencidas - Actualización Septiembre
                 </div>
                 <div class="client-list">
                     <div class="client-item">
-                        <div class="client-name">1. INSTITUTO DIAGNISTICO SAN BERNARDINO</div>
-                        <div class="client-amount">$2,654.63</div>
+                        <div class="client-name">1. BANCO DEL TESORO CA</div>
+                        <div class="client-amount">$1,612.69</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">2. BANCO DEL TESORO CA</div>
-                        <div class="client-amount">$1,111.87</div>
+                        <div class="client-name">2. CLUB PUERTO AZUL AC</div>
+                        <div class="client-amount">$391.08</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">3. MIRANDA GAS MIRANGAS SA</div>
-                        <div class="client-amount">$671.30</div>
+                        <div class="client-name">3. AC CENTRO MEDICO DOCENTE LA TRINIDAD</div>
+                        <div class="client-amount">$229.49</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">4. AC CENTRO MEDICO DOCENTE LA TRINIDAD</div>
-                        <div class="client-amount">$365.29</div>
+                        <div class="client-name">4. MIRANDA GAS MIRANGAS SA</div>
+                        <div class="client-amount">$229.31</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">5. Eidys Vladimir Diaz Travieso</div>
-                        <div class="client-amount">$276.17</div>
+                        <div class="client-name">5. ALBA DEL OTERO</div>
+                        <div class="client-amount">$219.69</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">6. MARIA CLAVIER</div>
-                        <div class="client-amount">$153.63</div>
+                        <div class="client-name">6. Eidys Vladimir Diaz Travieso SALD PENDT FT 27609</div>
+                        <div class="client-amount">$190.37</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">7. AC CENTRO MEDICO DOCENTE LA TRINIDAD (Sucursal)</div>
-                        <div class="client-amount">$151.93</div>
+                        <div class="client-name">7. Marisabel Gonzalez</div>
+                        <div class="client-amount">$188.11</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">8. Ursula Rua Figueroa</div>
-                        <div class="client-amount">$120.41</div>
+                        <div class="client-name">8. CARMEN DABOIN</div>
+                        <div class="client-amount">$163.47</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">9. Miriam Zulay Contreras De Alayon</div>
-                        <div class="client-amount">$104.55</div>
+                        <div class="client-name">9. TERESA MORALES</div>
+                        <div class="client-amount">$134.39</div>
                     </div>
                     <div class="client-item">
-                        <div class="client-name">10. AMERICA HIDALGO DE ZAMBRANO / COCOMERCADO</div>
-                        <div class="client-amount">$101.67</div>
+                        <div class="client-name">10. Aleida Del Carmen Porras</div>
+                        <div class="client-amount">$124.68</div>
                     </div>
                 </div>
             </div>
@@ -497,13 +497,13 @@
                 </div>
                 <div class="metric-card risk-medium">
                     <h3>Riesgo Medio</h3>
-                    <div class="value">$3,052</div>
-                    <div class="change">6 facturas <span class="improvement-badge">Mantiene control</span></div>
+                    <div class="value">$1,233</div>
+                    <div class="change">29 facturas <span class="improvement-badge">+23 facturas vs anterior</span></div>
                 </div>
                 <div class="metric-card excellent-metric">
                     <h3>Riesgo Bajo</h3>
-                    <div class="value positive-trend">$5,425</div>
-                    <div class="change positive-trend">274 facturas <span class="improvement-badge">97.9% del total</span></div>
+                    <div class="value positive-trend">$4,935</div>
+                    <div class="change positive-trend">280 facturas <span class="improvement-badge">90.6% del total</span></div>
                 </div>
             </div>
 
@@ -518,10 +518,10 @@
                     <strong>Sin Riesgo Alto:</strong> <span class="positive-trend">0 facturas de alto riesgo</span> - Mantiene excelente gestión preventiva
                 </div>
                 <div class="alert-item">
-                    <strong>Riesgo Medio Controlado:</strong> Solo 6 facturas de riesgo medio ($3,052) - <span class="positive-trend">Mantiene control</span>
+                    <strong>Riesgo Medio Controlado:</strong> 29 facturas de riesgo medio ($1,233.46) - <span class="positive-trend">Mantiene control</span>
                 </div>
                 <div class="alert-item">
-                    <strong>Cartera Optimizada:</strong> 97.9% de facturas de bajo riesgo - <span class="positive-trend">Mantiene buen nivel</span>
+                    <strong>Cartera Optimizada:</strong> 90.6% de facturas de bajo riesgo - <span class="positive-trend">Mantiene buen nivel</span>
                 </div>
                 <div class="alert-item">
                     <strong>Estrategia Exitosa:</strong> Las políticas implementadas muestran resultados positivos - <span class="positive-trend">Continuar con el enfoque actual</span>
@@ -574,11 +574,11 @@
         function renderOverviewCharts() {
             // Gráfico de torta - Estado de vencimiento
             const agingData = [{
-                values: [7460.19, 1016.42],
-                labels: ['Por vencer', 'Vencida (0-30 días)'],
+                values: [4985.76, 910.64, 272.30],
+                labels: ['Por vencer', 'Vencida (0-30 días)', 'Vencida (31-60 días)'],
                 type: 'pie',
                 marker: {
-                    colors: ['#7CC141', '#F79617']
+                    colors: ['#7CC141', '#F79617', '#FED519']
                 },
                 textinfo: 'label+percent',
                 textposition: 'outside'
@@ -592,8 +592,8 @@
 
             // Gráfico de barras - Top 5 clientes
             const topClientsData = [{
-                x: [2654.63, 1111.87, 671.30, 365.29, 276.17],
-                y: ['INSTITUTO DIAGNISTICO SAN BERNARDINO', 'BANCO DEL TESORO CA', 'MIRANDA GAS MIRANGAS SA', 'AC CENTRO MEDICO DOCENTE LA TRINIDAD', 'Eidys Vladimir Diaz Travieso'],
+                x: [1612.69, 391.08, 229.49, 229.31, 219.69],
+                y: ['BANCO DEL TESORO CA', 'CLUB PUERTO AZUL AC', 'AC CENTRO MEDICO DOCENTE LA TRINIDAD', 'MIRANDA GAS MIRANGAS SA', 'ALBA DEL OTERO'],
                 type: 'bar',
                 orientation: 'h',
                 marker: {
@@ -615,14 +615,14 @@
             const agingDetailData = [
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [204, 76, 0, 0],
+                    y: [206, 77, 26, 0],
                     name: 'Cantidad de Facturas',
                     type: 'bar',
                     marker: {color: locatelColors[0]}
                 },
                 {
                     x: ['Por vencer', 'Vencida (0-30)', 'Vencida (31-60)', 'Vencida (61+)'],
-                    y: [7460.19, 1016.42, 0, 0],
+                    y: [4985.76, 910.64, 272.30, 0],
                     name: 'Monto ($)',
                     type: 'bar',
                     yaxis: 'y2',
@@ -642,7 +642,7 @@
         function renderClientCharts() {
             // Distribución por cliente (top 10 vs resto)
             const clientDistData = [{
-                values: [6875.88, 1600.73],
+                values: [3383.39, 2785.31],
                 labels: ['Top 10 Clientes', 'Otros Clientes'],
                 type: 'pie',
                 marker: {
@@ -658,7 +658,7 @@
             // Concentración de cobros
             const concentrationData = [{
                 x: ['Top 3', 'Top 5', 'Top 10', 'Todos'],
-                y: [52.3, 60.9, 81.1, 100],
+                y: [35.9, 43.4, 54.8, 100],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -674,8 +674,8 @@
         function renderTrendCharts() {
             // Evolución mensual
             const monthlyData = [{
-                x: ['Jul 2025', 'Ago 2025'],
-                y: [180, 100],
+                x: ['Jul 2025', 'Ago 2025', 'Sep 2025'],
+                y: [180, 100, 29],
                 type: 'scatter',
                 mode: 'lines+markers',
                 line: {color: locatelColors[1], width: 3}
@@ -689,8 +689,8 @@
 
             // Distribución mensual
             const monthlyDistData = [{
-                x: ['Jul', 'Ago'],
-                y: [180, 100],
+                x: ['Jul', 'Ago', 'Sep'],
+                y: [180, 100, 29],
                 type: 'bar',
                 marker: {color: locatelColors[2]}
             }];
@@ -704,7 +704,7 @@
             // Días de cobro promedio
             const collectionDaysData = [{
                 x: ['Promedio General'],
-                y: [20.6],
+                y: [25.7],
                 type: 'bar',
                 marker: {color: locatelColors[4]}
             }];
@@ -721,7 +721,7 @@
             // Matriz de riesgo
             const riskData = [{
                 x: ['Bajo', 'Medio', 'Alto'],
-                y: [5424.96, 3051.65, 0],
+                y: [4935.24, 1233.46, 0],
                 type: 'bar',
                 marker: {
                     color: ['#7CC141', '#F79617', '#dc3545']
